--- a/css1/inline.html
+++ b/css1/inline.html
@@ -2,6 +2,6 @@
     <head>
     </head>
     <body>
-        <h1 style="background-color: blue;"/>fvda</h1>
+        <h1 style="background-color: blue;"/>fvda hfhtf</h1>
     </body>
 </html>
