--- a/css1/inline.html
+++ b/css1/inline.html
@@ -3,5 +3,6 @@
     </head>
     <body>
         <h1 style="background-color: blue;"/>fvda hfhtf</h1>
+        <h2 style="background-color: red;"/>gdhsjedhfggdhw</h2>
     </body>
 </html>
