--- a/css1/internal.html
+++ b/css1/internal.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <style>
-           p,b{
+          b{
                 background-color: orange;
             }
         </style>
@@ -11,4 +11,19 @@
         <h1>gdhfgsfas</h1>
         <b>bghj</b>
     </body>
+</html>
+<html>
+    <head>
+        <style>
+            h5{
+                background-color: greenyellow;
+
+            }
+        </style>
+        <body>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis commodi illo nobis accusamus doloremque sequi aliquid deserunt earum, alias inventore soluta error modi neque quisquam ratione et perferendis autem quos!</p>
+            <h1>gdfhgj</h1>
+            <h5>ewrtdyfughxcgv</h5>
+        </body>
+    </head>
 </html>
