--- a/css1/internal.html
+++ b/css1/internal.html
@@ -1,29 +1,16 @@
 <html>
     <head>
-        <style>
-          b{
-                background-color: orange;
-            }
-        </style>
+        <link href="./two.css" rel="stylesheet">
+        
     </head>
-    <body>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit culpa pariatur quaerat fugit nihil dolorum dolor, voluptatibus velit alias suscipit quisquam reiciendis autem cumque, repellat voluptas dicta dolore molestiae? Iusto?</p>
-        <h1>gdhfgsfas</h1>
-        <b>bghj</b>
-    </body>
-</html>
-<html>
-    <head>
-        <style>
-            h5{
-                background-color: greenyellow;
+    <style>
+        h1{
+             background-color:red;
+        }
 
-            }
-        </style>
-        <body>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis commodi illo nobis accusamus doloremque sequi aliquid deserunt earum, alias inventore soluta error modi neque quisquam ratione et perferendis autem quos!</p>
-            <h1>gdfhgj</h1>
-            <h5>ewrtdyfughxcgv</h5>
-        </body>
-    </head>
+    </style>
+    <body>
+    <h1>venkat</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quibusdam aliquid, amet vitae corporis sapiente dolor labore quaerat earum delectus voluptas provident optio molestias dolorum, quisquam ullam aliquam beatae accusamus.</p>
+    </body>
 </html>
